--- a/src/app/modules/tracks/pages/tracks-pag/tracks-pag.component.html
+++ b/src/app/modules/tracks/pages/tracks-pag/tracks-pag.component.html
@@ -1,1 +1,4 @@
-<p>tracks-pag works!</p>
+<div class="tracks-page">
+ <app-section-generic [dataTracks]="mockTracksList" [mode]="'small'" [title]="'The Best Music'"></app-section-generic>
+ <app-section-generic [dataTracks]="mockTracksList" [mode]="'big'" [title]="'The Best Of The World'"></app-section-generic>
+</div>
