--- a/src/app/shared/Components/play-list-body/play-list-body.component.html
+++ b/src/app/shared/Components/play-list-body/play-list-body.component.html
@@ -1,7 +1,7 @@
 <div class="play-list-body">
     <ul class="play-list-table-header">
-        <li>Title</li>
-        <li>Album</li>
+        <li (click)="changeSort('name')">Title</li>
+        <li (click)="changeSort('album')">Album</li>
         <li>Fecha incorporación</li>
         <li><i class="uil uil-clock-eight"></i></li>
     </ul>
