--- a/src/app/shared/Components/card-player/card-player.component.html
+++ b/src/app/shared/Components/card-player/card-player.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="mode==='small'" class="card-player player-small">
-    <img [src]="track?.cover" [alt]="track?.name" class="cover">
+    <img [src]="track.cover" [alt]="track.name" class="cover">
     <div class="content-player">
-        {{track?.name}}
+        {{track.name}}
     </div>
     <div class="buttons-player">
         <button *ngIf="true" class="play-btn">
@@ -15,7 +15,7 @@
 
 <div *ngIf="mode==='big'" class="card-player player-big">
 
-    <img appImgBroken [src]="track.cover" alt="" class="cover">
+    <img appImgBroken [customImg]="'https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/2048px-Angular_full_color_logo.svg.png'" [src]="track.cover" alt="" class="cover">
 
     <div class="content-player">
         <div class="title-track">{{track.name}}</div>
