--- a/src/app/shared/Components/play-list-header/play-list-header.component.css
+++ b/src/app/shared/Components/play-list-header/play-list-header.component.css
@@ -8,7 +8,7 @@
 }
 
 .content-text {
-    padding: 1.5rem 0px;
+    padding: 1.5rem 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -36,13 +36,12 @@
 
 .content-text .title,
 .content-text .sub-title {
-    margin: 15px;
-    margin-left: 0px;
+    margin: 0;
     font-weight: 600;
 }
 
 .content-text .title {
-    font-size: 4rem;
+    font-size: 6rem;
     letter-spacing: -7px;
 }
 
